--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -310,3 +310,18 @@ margin-top: 5px;
 
 
 }
+.colour-span{
+  color: purple;
+
+
+}
+
+.edit-your-profile-pic{
+  color: black;
+  font-weight: bolder;
+  text-align: center;
+  margin-top: 100px;
+  font-size: 42px;
+
+
+}
