--- a/views/index.hbs
+++ b/views/index.hbs
@@ -47,6 +47,8 @@
 <h3><ul><li> Like ❤️ your favourite artists</li></ul></h3>
 <h3><ul><li> Comment on songs and see what your friends are saying!</li></ul></h3>
 <h3><ul><li> Create an account to use the search engine 😎 </li></ul></h3>
+<h3><ul><li> Create your own artist! </li></ul></h3>
+
 <form action="/artists/create" method="get">
 <div class="login-button-div"><button type="submit" class="btn btn-primary">Create an artist!</button></div>
 </form>
