--- a/views/artists/comment-create.hbs
+++ b/views/artists/comment-create.hbs
@@ -1,14 +1,14 @@
-<h4>Comment on the artist</h4>
+<h4 class="center-stuff">Comment and leave a rating! </h4>
 
-<form action="/comments/{{foundArtist.body.id}}" method="post">
-	<p>{{foundArtist.body.name}}</p>
-	<p> By {{user.username}}</p>
+<form action="/comments/{{foundArtist.body.id}}" method="post" id="comment-form">
+	<p><span>Artist Name:</span> {{foundArtist.body.name}}</p>
+	<p><span>By:</span>  @{{user.username}}</p>
 
-	<label for="content">Content
-		<textarea name="content" id="content" cols="30" rows="5"></textarea>
+	<label for="content">
+		<textarea name="content" id="content" cols="30" rows="5" placeholder="Tell us your thoughts..."></textarea>
 	</label>
 	<label for="rating">Rating
-		<input name="rating" id="rating" type="number" min="1" max="5" />
+		<input name="rating" id="rating" type="number" min="1" max="5"  style="width: 50px; height: 30px;" placeholder="0/5" />
 	</label>
-	<button type="submit">Create the comment</button>
+	<button type="submit" class="btn btn-dark">Create Comment</button>
 </form>
