--- a/views/auth/edit-profile.hbs
+++ b/views/auth/edit-profile.hbs
@@ -27,7 +27,7 @@
     }
 
     button[type="submit"] {
-      background-color: #4caf50;
+      background-color: #217e24;
       color: #fff;
       border: none;
       padding: 10px 20px;
