--- a/views/artists/album-search.hbs
+++ b/views/artists/album-search.hbs
@@ -5,13 +5,19 @@
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
     align-items: center; /* Center align items vertically */
+    margin: 10px 0px;
   }
 
+.total-albums{
+  margin-top: 15px;
+
+}
   /* Grid item */
   .grid-item {
     background-color: inherit;
     padding: 20px;
     text-align: center;
+    margin: 10px 0px;
     color: black;
   }
 
@@ -32,19 +38,63 @@
     position: absolute;
     top: 0;
     left: 0;
+    transition: transform 0.3s; /* Add transition for smooth effect */
+  }
+
+  /* Hover effect for images */
+  .grid-item:hover img {
+    transform: scale(1.1); /* Increase size on hover */
+  }
+
+  .this-name{
+    font-weight: bold;
+
+
+  }
+  <style>
+  /* Button styles */
+  .btn {
+    display: inline-block;
+    background-color: #007bff;
+    color: #fff;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  /* Remove underline for hyperlink */
+  .button-link {
+    text-decoration: none;
+    color: #fff;
+    
+  }
+  .view-songs{
+    color: white;
   }
 </style>
+
+</style>
+
 
 <div class="grid-container">
   {{#each result}}
   <div class="grid-item">
-    <h6>{{this.name}}</h6>
+    <h6 class="this-name">{{this.name}}</h6>
     <div class="image-container">
       <img src={{this.images.0.url}} alt="" />
     </div>
+    <div class="total-albums">
     <p>Total Album Tracks: {{this.total_tracks}}</p>
+    </div>
+     <div class="total-albums">
     <p>By: {{this.artists.0.name}}</p>
-    <a href="/album-tracks/{{id}}">View Songs</a>
+ </div>
+ <button class="btn btn-primary">
+  <a class="button-link" href="/album-tracks/{{id}}"><span class="view-songs">View Songs</span></a>
+</button>
+
   </div>
   {{/each}}
 </div>
