--- a/views/artists/song-search.hbs
+++ b/views/artists/song-search.hbs
@@ -22,6 +22,12 @@
     max-height: 200px;
     object-fit: cover;
     border-radius: 5px;
+    transition: transform 0.3s; /* Add transition for smooth effect */
+  }
+
+  /* Hover effect for album images */
+  .grid-item img.images-songs:hover {
+    transform: scale(1.1); /* Increase size on hover */
   }
 
   /* Caption styles */
@@ -32,9 +38,17 @@
 
   /* Audio player styles */
   .grid-item audio {
-    width: 100%;
+    width: 80%;
+    transition: transform 0.3s; /* Add transition for smooth effect */
+  }
+
+  /* Hover effect for audio player */
+  .grid-item:hover audio {
+    transform: scale(1.1); /* Increase size on hover */
   }
 </style>
+
+
 
 <div class="grid-container">
   {{#each result}}
