--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -36,6 +36,8 @@
 										/></span>{{myUser.createdAt}}</p>
 
 							</div>
+							<div class="see-your-created-artists"><button class="btn btn-primary"><a href="/artists"  class="remove-underline-button">Your Created Artists</a></div></button>
+
 							<div
 								class="favorite-artists-grid p-4"
 								style="background-color: #f8f9fa;"
